--- a/client/src/css/counter.css
+++ b/client/src/css/counter.css
@@ -21,6 +21,7 @@
   height: 100%;
   justify-content: center;
   margin-bottom: 2rem;
+  border-radius: 20px;
   background-color: #8e56a6;
   color: #f2f2f2;
 }
